page card ui optimize and align ui fixed

--- a/src/components/editor/plugins/image/style.less
+++ b/src/components/editor/plugins/image/style.less
@@ -17,13 +17,13 @@
 .img-align-left {
   .inner-img-width();
   .relative();
-  left: -40px;
+  // left: -40px;
 }
 
 .img-align-right {
   .inner-img-width();
   .relative();
-  right: -40px;
+  // right: -40px;
 }
 
 .img-align-center {
