--- a/src/components/editor/plugins/page-card/components/pageCard.less
+++ b/src/components/editor/plugins/page-card/components/pageCard.less
@@ -40,6 +40,15 @@
             margin-bottom: 5px;
         }
     }
+    a{
+        -o-text-overflow: ellipsis;/*兼容opera*/
+        text-overflow: ellipsis;/*这就是省略号喽*/		  
+        overflow: hidden;/*设置超过的隐藏*/
+        white-space: nowrap;/*设置不折行*/
+        @media @phone{
+            width:240px;/*设置宽度*/            
+        }
+    }
 }
 
 em,
